--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
     "nodemailer": "^6.4.11",
+    "nodemailer-smtp-transport": "^2.7.4",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
