--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": " nodemon server.js"
   },
+  "engines": {
+    "node": "12.x",
+    "npm": "6.x"
+
+  },
   "keywords": [
     "node",
     "restful",
